--- a/src/data/post/markdown-elements-demo-post.mdx
+++ b/src/data/post/markdown-elements-demo-post.mdx
@@ -173,7 +173,7 @@ Reprehenderit non eu quis in ad elit esse qui aute id [incididunt](#!) dolore ci
 
 ```js
 ---
-publishDate: 'Aug 02 2022'
+publishDate: "Aug 02 2022"
 title: 'Markdown elements demo post'
 ---
 import Logo from "~/components/Logo.astro";
